--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -7,11 +7,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <TextView
         android:id="@+id/textView_main_label"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:text="작물을 선택해주세요 . " />
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:text="작물 선택"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="monospace" />
+
+
+    <TextView
+        android:id="@+id/select_crop_buyer"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="검색을 한 후 지도확인으로 넘어가주세요"
+        android:layout_gravity="center"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,59 +37,67 @@
         <TextView
             android:id="@+id/selected_crop2"
             android:layout_width="0dp"
-            android:layout_weight="0.35"
-            android:layout_height="match_parent" />
+            android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:gravity="center"/>
 
         <Button
             android:id="@+id/button_main_search"
             android:layout_width="0dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.7"
             android:layout_height="match_parent"
-            android:text="search" />
+            android:text="검색" />
 
         <Button
             android:id="@+id/nextgo"
             android:layout_width="0dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.7"
             android:layout_height="match_parent"
             android:onClick="nextgo"
-            android:text="next"
+            android:text="지도 확인"
             tools:ignore="OnClick" />
 
     </LinearLayout>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/listView_address_list"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="10dp"
         android:orientation="horizontal">
 
         <ListView
-            android:id="@+id/listView_main_listX"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView_address_list"/>
 
         <ListView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:id="@+id/listView_main_listX"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/listView_main_listY"/>
 
     </LinearLayout>
 
+
     <TextView
-        android:id="@+id/textvieww"
+        android:id="@+id/select_crop_textview"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="농작물 종류" />
+        android:layout_height="35dp"
+        android:text="농작물종류"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
 
     <ListView
         android:id="@+id/crop_list"
         android:layout_width="match_parent"
-        android:layout_height="310dp"
+        android:layout_height="350dp"
         android:cacheColorHint="#FFF9F7E8"></ListView>
 
 </LinearLayout>
