--- a/app/src/main/res/layout/activity_check_title.xml
+++ b/app/src/main/res/layout/activity_check_title.xml
@@ -7,12 +7,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="39dp"
         android:layout_gravity="center"
-        android:layout_margin="70dp"
         android:layout_marginTop="70dp"
         android:text="게시물 확인"
         android:textColor="#000000"
@@ -20,41 +21,41 @@
         android:textStyle="bold"
         android:typeface="monospace" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/selected_sname"
         android:layout_width="match_parent"
         android:layout_height="20sp"
-        android:text=""
-        android:textSize="10sp" />
+        android:textColor="#00ff0000" />
 
     <TextView
         android:id="@+id/selected_sname2"
         android:layout_width="match_parent"
         android:layout_height="20sp"
-        android:text=""
-        android:textSize="10sp" />
+        android:textColor="#00ff0000" />
 
     <TextView
         android:id="@+id/selected_sname3"
         android:layout_width="match_parent"
         android:layout_height="20sp"
-        android:text=""
-        android:textSize="10sp" />
+        android:textColor="#00ff0000" />
 
     <TextView
         android:id="@+id/selected_sname4"
         android:layout_width="match_parent"
         android:layout_height="20sp"
-        android:text=""
-        android:textSize="10sp" />
+        android:textColor="#00ff0000" />
 
-    <!--    <TextView  비밀번호 받아오면 그거 칸으로 쓰기
-            android:id="@+id/selected_sname5"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text=""
-            android:textSize="10sp" />-->
+    <TextView
+        android:id="@+id/selected_sname5"
+        android:layout_width="match_parent"
+        android:layout_height="20sp"
+        android:textColor="#00ff0000" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/sname_listview"
