--- a/app/src/main/res/layout/activity_information2.xml
+++ b/app/src/main/res/layout/activity_information2.xml
@@ -53,22 +53,22 @@
         android:layout_margin="10dp"
         tools:context=".Information">
 
-    <TextView
-        android:id="@+id/crop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="작물: "
-        android:textColor="#000000"
-        android:textSize="18sp" />
-    <TextView
-        android:id="@+id/textinfo2"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:background="#FFFAE7"
-        android:inputType="text"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/crop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="작물: "
+            android:textColor="#000000"
+            android:textSize="18sp" />
+        <TextView
+            android:id="@+id/textinfo2"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:background="#FFFAE7"
+            android:inputType="text"
+            android:textSize="18sp" />
     </LinearLayout>
 
 
@@ -111,11 +111,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2.5"
-        android:text=""
+        android:singleLine="false"
+        android:background="#FFFAE7"
+        android:inputType="textMultiLine"
+        android:textSize="18sp"
+        android:layout_margin="20dp"/>
+
+<!--비밀번호 입력확인하기 위한것-->
+    <TextView
+        android:id="@+id/textinfo5"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:background="#FFFAE7"
         android:inputType="text"
         android:textSize="18sp"
         android:layout_margin="20dp"/>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal"
+        android:layout_margin="10dp">
+
+        <TextView
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="비밀번호  "
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/inputpw"
+            android:hint="비밀번호를 입력하세요"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:background="#FFFAE7"
+            android:inputType="text"
+            android:textSize="18sp"/>
+
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/btndelete"
