--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -159,7 +159,7 @@
         android:layout_weight="2.5"
         android:background="#FFFAE7"
         android:hint=" 가격, 시간, 전화번호 등 판매에 필요한 정보를 입력해주세요"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textSize="18sp"
         android:layout_margin="20dp"/>
 
