--- a/app/src/main/res/layout/list_test.xml
+++ b/app/src/main/res/layout/list_test.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--information -> listView_title-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_margin="15dp"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView_list_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:padding="5dp" />
+        android:layout_width="300dp"
+        android:layout_height="35dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:textSize="18sp" />
 
 </LinearLayout>
