--- a/app/src/main/res/layout/list_test2.xml
+++ b/app/src/main/res/layout/list_test2.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--information -> listView_content-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,9 +13,8 @@
     <TextView
         android:id="@+id/textView_list_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:padding="5dp" />
+        android:layout_height="200dp"
+        android:textSize="25sp"
+        android:gravity="center"/>
 
 </LinearLayout>
