--- a/app/src/main/res/layout/list_y.xml
+++ b/app/src/main/res/layout/list_y.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--buyer에서 listView_main_listY -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -14,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_margin="5dp"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textColor="#00ff0000"/>
 
 </LinearLayout>
