--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -84,7 +84,7 @@
             android:layout_width="10dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="판매 농작물: "
+            android:text="농작물: "
             android:textColor="#000000"
             android:textSize="18sp" />
         <TextView
