--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     >
 
     <TextView
@@ -163,39 +162,18 @@
         android:textSize="18sp"
         android:layout_margin="20dp"/>
 
+
     <Button
-        android:id="@+id/btnHot"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnComplete"
+        android:layout_width="100dp"
+        android:layout_height="35dp"
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp"
         android:background="#189BA3"
-        android:onClick="btnHot"
-        android:text="내 주변 hot 작물 확인"
-        android:layout_margin="10dp"/>
+        android:onClick="btnComplete"
+        android:text="입력 완료"
+        android:textSize="18sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:context=".seller">
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:textColor="#000000"
-            android:text="소상공인인 경우 체크!" />
-
-        <Button
-            android:id="@+id/btnComplete"
-            android:layout_width="140dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:background="#189BA3"
-            android:onClick="btnComplete"
-            android:text="입력 완료"
-            android:textSize="18sp" />
-
-    </LinearLayout>
 
     <TextView
         android:id="@+id/sqltext"
