28일 - seller에서 검색완료하면 popup

--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -170,7 +170,7 @@
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
         android:background="#189BA3"
-        android:onClick="btnComplete"
+        android:onClick="onSellerClick"
         android:text="입력 완료"
         android:textSize="18sp" />
 
