--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -80,6 +80,11 @@
             android:layout_height="match_parent"
             android:id="@+id/listView_main_listY"/>
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView_main_FarmName"/>
+
     </LinearLayout>
 
 
