--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -96,6 +96,32 @@
             android:gravity="center"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
+        tools:context=".Information">
+
+        <TextView
+            android:id="@+id/textViewtime"
+            android:layout_width="10dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:text="등록 날짜: "
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+        <ListView
+            android:id="@+id/listView_time"
+            android:layout_width="167dp"
+            android:layout_height="35dp"
+            android:layout_weight="6"
+            android:dividerHeight="35dp"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/checkContent"
@@ -106,16 +132,9 @@
         android:textSize="18sp"
         android:gravity="center"/>
 
-    <ListView
-        android:id="@+id/listView_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2.5"
-        android:dividerHeight="200dp"
-        android:textSize="30sp" />
 
     <ListView
-        android:id="@+id/listView_time"
+        android:id="@+id/listView_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2.5"
