--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -1,66 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:gravity="center"
+        android:id="@+id/textView_main_label"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="10dp"
+        android:text="농작물"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="monospace" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="판매를 원하는 농작물을 고르세요."
-        android:textSize="20sp" />
+        android:layout_marginBottom="10dp"
+        android:textColor="#000000"
+        android:layout_gravity="center"
+        />
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="47dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="선택항목:"
-            android:textSize="26sp" />
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <TextView
             android:id="@+id/selected_crop"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:background="@drawable/border" />
+
+        <Button
+            android:id="@+id/btnGet2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="26sp" />
+            android:layout_weight="0.3"
+            android:text="검색"
+            android:layout_marginLeft="5dp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/button_design"
+            android:onClick="ClickButton"/>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <ImageButton
-            android:id="@+id/btnGet2"
-            android:layout_width="46dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/confirm"
-            android:onClick="ClickButton"></ImageButton>
+<!--        <ImageButton-->
+<!--            android:id="@+id/btnGet2"-->
+<!--            android:layout_width="46dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@drawable/confirm"-->
+<!--            android:onClick="ClickButton"></ImageButton>-->
     </LinearLayout>
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="425dp"
-        android:layout_height="581dp"
-        android:cacheColorHint="#FFF9F7E8" >
-    </ListView>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#FFF9F7E8"
+        android:scrollbarSize="7dp"
+        android:scrollbarStyle="insideOverlay"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/border"></ListView>
 
 </LinearLayout>
 
