--- a/app/src/main/res/layout/activity_farm.xml
+++ b/app/src/main/res/layout/activity_farm.xml
@@ -1,69 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_farm">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/textView_main_label"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="10dp"
+        android:text="주소"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="monospace" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="26sp"
-        android:layout_marginRight="8dp"
-        android:id="@+id/textView1"
-        android:text="주소 검색" />
+        android:text="농장 주소를 검색하거나 선택하세요"
+        android:layout_marginBottom="10dp"
+        android:textColor="#000000"
+        android:layout_gravity="center"
+        />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/textView1"
-        android:id="@+id/editTextFilter"/>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp">
 
         <TextView
+            android:id="@+id/textView1"
+            android:text="검색"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26sp"
-            android:layout_marginRight="8dp"
-            android:id="@+id/textView2"
-            android:text="선택한 주소" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:gravity="center" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26sp"
-            android:layout_marginRight="8dp"
-            android:id="@+id/selected_address"/>
+<!--        <EditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_toRightOf="@id/textView1"-->
+<!--            android:id="@+id/editTextFilter"/>-->
+
+        <EditText
+            android:id="@+id/editTextFilter"
+            android:layout_toRightOf="@id/textView1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/border" />
 
     </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_ok"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#189BA3"
-            android:onClick="OnClickHandle"
-            android:text="확인"
-            android:layout_margin="10dp"/>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:text="선택"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:gravity="center" />
+
+        <!--        <EditText-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_toRightOf="@id/textView1"-->
+        <!--            android:id="@+id/editTextFilter"/>-->
+
+        <TextView
+            android:id="@+id/selected_address"
+            android:layout_toRightOf="@id/textView1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/border" />
+
+    </LinearLayout>
+
+
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="26sp"-->
+<!--            android:layout_marginRight="8dp"-->
+<!--            android:id="@+id/textView2"-->
+<!--            android:text="선택한 주소" />-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="26sp"-->
+<!--            android:layout_marginRight="8dp"-->
+<!--            android:id="@+id/selected_address"/>-->
+
+<!--    </LinearLayout>-->
+
+
+<!--    여기부터해야함!!!!!!!!!!!!!!!!!!!!-->
     <ListView
         android:id="@+id/listview1"
         android:layout_width="match_parent"
@@ -71,5 +138,37 @@
         android:layout_below="@id/editTextFilter"
         android:textFilterEnabled="true" />
 
+    <ListView
+        android:id="@+id/crop_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#FFF9F7E8"
+        android:scrollbarSize="7dp"
+        android:scrollbarStyle="insideOverlay"
+        android:textSize="18sp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/border"></ListView>
+
+<!--    <Button-->
+<!--        android:id="@+id/btn_ok"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="#189BA3"-->
+<!--        android:onClick="OnClickHandle"-->
+<!--        android:text="확인"-->
+<!--        android:layout_margin="10dp"/>-->
+
+    <Button
+        android:id="@+id/btn_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"
+        android:onClick="OnClickHandle"
+        android:text="확인"
+        tools:ignore="OnClick"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/button_design"/>
+
     </LinearLayout>
-</RelativeLayout>
