--- a/app/src/main/res/layout/activity_information2.xml
+++ b/app/src/main/res/layout/activity_information2.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginLeft="20dp"
+    android:layout_margin="20dp"
+    android:layout_marginBottom="10dp"
     tools:context=".Information2"
     >
 
@@ -14,6 +17,7 @@
         android:layout_height="39dp"
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
+        android:layout_marginBottom="30dp"
         android:text="판매 정보"
         android:textColor="#000000"
         android:textSize="30sp"
@@ -24,7 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
-        android:layout_margin="10dp"
         tools:context=".Information2">
 
         <TextView
@@ -41,7 +44,6 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="#FFFAE7"
             android:inputType="text"
             android:textSize="18sp" />
     </LinearLayout>
@@ -50,7 +52,6 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
-        android:layout_margin="10dp"
         tools:context=".Information">
 
         <TextView
@@ -66,7 +67,6 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="#FFFAE7"
             android:inputType="text"
             android:textSize="18sp" />
     </LinearLayout>
@@ -76,7 +76,6 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
-        android:layout_margin="10dp"
         tools:context=".Information">
 
         <TextView
@@ -93,7 +92,6 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="#FFFAE7"
             android:inputType="text"
             android:textSize="18sp" />
     </LinearLayout>
@@ -102,58 +100,54 @@
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" 상세 내용 "
+        android:text="상세 내용 "
         android:textColor="#000000"
         android:textSize="18sp" />
+
+    <!--비밀번호 입력확인하기 위한것-->
 
     <TextView
         android:id="@+id/textinfo4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_weight="2.5"
-        android:singleLine="false"
-        android:background="#FFFAE7"
-        android:inputType="textMultiLine"
-        android:textSize="18sp"
-        android:layout_margin="20dp"/>
 
-<!--비밀번호 입력확인하기 위한것-->
+        android:inputType="textMultiLine"
+        android:singleLine="false"
+        android:textSize="18sp" />
+
     <TextView
         android:id="@+id/textinfo5"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="#FFFAE7"
+        android:layout_height="10dp"
         android:inputType="text"
         android:textSize="18sp"
-        android:layout_margin="20dp"
         android:textColor="#00ff0000"/>
 
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
+        android:layout_height="60dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/password"
-            android:layout_width="wrap_content"
+            android:layout_width="122dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="비밀번호  "
+            android:text="                      비밀번호 "
             android:textColor="#000000"
             android:textSize="18sp" />
 
         <EditText
             android:id="@+id/inputpw"
-            android:hint="비밀번호를 입력하세요"
-            android:layout_width="300dp"
+            android:layout_width="96dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="#FFFAE7"
+            android:hint="비밀번호를 입력하세요"
             android:inputType="text"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
     </LinearLayout>
 
