--- a/app/src/main/res/layout/list_test.xml
+++ b/app/src/main/res/layout/list_test.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--information -> listView_title-->
+<!--information -> listView_title
+        android:layout_weight="2"
+-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,8 +14,8 @@
         android:id="@+id/textView_list_title"
         android:layout_width="300dp"
         android:layout_height="35dp"
-        android:layout_weight="2"
-        android:gravity="center"
+        android:gravity="left"
+        android:textColor="#000000"
         android:textSize="18sp" />
 
 </LinearLayout>
