--- a/app/src/main/res/layout/list_test2.xml
+++ b/app/src/main/res/layout/list_test2.xml
@@ -13,8 +13,9 @@
     <TextView
         android:id="@+id/textView_list_content"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:textSize="25sp"
-        android:gravity="center"/>
+        android:layout_height="400dp"
+        android:textSize="18sp"
+        android:textColor="#000000"
+        android:gravity="left"/>
 
 </LinearLayout>
